Added csv report generation funtionality

--- a/dailybowlnpo/src/main/resources/templates/donor.html
+++ b/dailybowlnpo/src/main/resources/templates/donor.html
@@ -31,8 +31,12 @@
             <td th:text="${stat.valuation}"></td>
         </tr>
     </table>
-</div>
 
+    <button type="button" th:onclick="generateCSV()">GenerateReport</button>
+</div>
+<script>
+
+</script>
 
 </body>
 
