Added all fields for donor report and created signin functionality

--- a/dailybowlnpo/src/main/resources/templates/donor.html
+++ b/dailybowlnpo/src/main/resources/templates/donor.html
@@ -36,12 +36,10 @@
             <td th:text="${stat.date}"></td>
         </tr>
     </table>
+<!--    <form method="get" action="signin.html">    <input type="submit">Download!</input> </form>-->
 
-    <button type="button" th:onclick="generateCSV()">GenerateReport</button>
 </div>
-<script>
 
-</script>
 
 </body>
 
