--- a/dailybowlnpo/src/main/resources/templates/signin.html
+++ b/dailybowlnpo/src/main/resources/templates/signin.html
@@ -38,7 +38,7 @@
                         <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                             <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
                             <input type="text" name="email" class="form-control" id="name"
-                                placeholder="you@example.com" required autofocus th:field = "*{name}">
+                                placeholder="Organization Name" required autofocus th:field = "*{name}">
                         </div>
                     </div>
                 </div>
