--- a/dailybowlnpo/src/main/resources/templates/signin.html
+++ b/dailybowlnpo/src/main/resources/templates/signin.html
@@ -38,17 +38,17 @@
                         <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                             <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
                             <input type="text" name="email" class="form-control" id="name"
-                                placeholder="Organization Name" required autofocus th:field = "*{name}">
+                                placeholder="Name" required autofocus th:field = "*{name}">
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-md-3">
+                <div th:if="${errorMsg}" class="col-md-3">
                     <div class="form-control-feedback">
                         <span class="text-danger align-middle">
-                            <i class="fa fa-close"></i> Example error message
+                            <i class="fa fa-close"></i> <span  th:text="${errorMsg}"></span>
                         </span>
                     </div>
-                </div> -->
+                </div> 
             </div>
             <div class="row">
                 <div class="col-md-3"></div>
